# ATE-Screen7

./: CMakeLists.txt  README.md  main.cpp  mydatabase.db  readme.txt  serialmanager.cpp  serialmanager.h  usb_hub_ports.txt  usb_ports_list.txt  widget.cpp  widget.h  widget.ui
